# coronary-artery

./: .gitignore  README.md  dvc.yaml  pyproject.toml  requirements.txt
.dvc/: config
data/: .gitignore  imageCAS.dvc
data/HaN_Seg/: README.md
data/imageCAS/: imageCAS_data_split.csv
nbs/: HaN.ipynb  anatomix_tutorial.ipynb  dataset_type_performance.ipynb  imageCAS.ipynb  ppe_tutorial.ipynb
result/proposed_SegResNet_distanceMap/: metrics.json  report.html
script/: ape_train.py  feature_train.py  post_processing_inference.py  ppe_train.py  proposed_post_processing_inference.py  proposed_train.py  train.py  train_hd.py
src/data/: ape.py  ape_dataloader.py  data_split.py  dataloader.py  dataloader_SkelREC.py  feature_dataloader.py  ppe.py  ppe_dataloader.py  proposed_dataloader.py  proposed_dataloader_SkelREC.py  transforms.py
src/data/eda/: imageCAS.ipynb
src/losses/: losses.py
src/losses/cldice/: cldice.py  cldice_loss.py  compound_cldice_loss.py
src/losses/skeleton_recall/: compound_losses.py  dice.py
src/models/: networks.py  ppe_networks.py  proposed_networks.py
src/models/model/: nnformer.py
src/models/proposed/: nnformer.py  ppe_segresnet.py  segresnet.py  spade.py  swin_unetr.py  unetr.py
src/utils/anatomix/: __init__.py
src/utils/anatomix/model/: __init__.py  network.py
src/utils/anatomix/registration/: README.md  __init__.py  convex_adam_utils.py  instance_optimization.py  (+1 more)
src/utils/ape/: datamodule.py  model.py  utils.py
src/utils/nnFormer/: generic_UNet.py  neural_network.py  nnFormer_acdc.py  nnFormer_seg.py  nnFormer_tumor.py
(+14 files in other folders)
