[project]
name = "coronary-artery"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "autorootcwd>=1.0.1",
    "ipykernel>=6.29.5",
    "monai>=1.4.0",
    "nibabel>=5.3.2",
    "pandas>=2.2.3",
    "scipy>=1.15.2",
    "seaborn>=0.13.2",
    "simpleitk>=2.4.1",
    "tqdm>=4.67.1",
]
